# cpp-with-rust

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gui/: CMakeLists.txt  FindSDL2.cmake
gui/src/: main.cpp
includes/: rust.h
rs/: CMakeLists.txt  Cargo.toml  rustfmt.toml
rs/src/: functions.rs  lib.rs  timer.rs
